--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:textSize="25sp" />
 
         <ImageView
-            android:id="@+id/iv_option"
+            android:id="@+id/iv_network"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
