--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,25 @@
             android:layout_toLeftOf="@id/iv_lock"
             android:src="@drawable/non_wifi" />
 
+        <TextView
+            android:id="@+id/tv_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/primary_light"
+            android:layout_toLeftOf="@id/iv_network"
+            android:layout_marginRight="20dp"
+            android:textSize="25sp" />
 
+        <TextView
+            android:id="@+id/tv_humid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/primary_light"
+            android:layout_toLeftOf="@id/tv_temp"
+            android:layout_marginRight="16dp"
+            android:textSize="25sp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -98,10 +116,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_weight="0.02"></SurfaceView>
+             ></SurfaceView>
         </LinearLayout>
-
-
     </LinearLayout>
 
 
@@ -119,7 +135,6 @@
             android:layout_centerInParent="true"
             android:text="等待用户操作"
             android:textColor="@color/primary_light"
-
             android:textSize="25sp"
             android:typeface="monospace" />
 
