--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/tv_time"
             android:src="@drawable/ic_lockup" />
 
@@ -53,7 +53,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/iv_lock"
             android:src="@drawable/non_wifi" />
 
@@ -64,8 +64,18 @@
             android:layout_centerVertical="true"
             android:textColor="@color/primary_light"
             android:layout_toLeftOf="@id/iv_network"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="15dp"
             android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/iv_temp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/tv_temp"
+            android:src="@drawable/temperature"
+           />
+
 
         <TextView
             android:id="@+id/tv_humid"
@@ -73,9 +83,18 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:textColor="@color/primary_light"
-            android:layout_toLeftOf="@id/tv_temp"
-            android:layout_marginRight="16dp"
+            android:layout_toLeftOf="@id/iv_temp"
+            android:layout_marginRight="8dp"
             android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/iv_humid"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@+id/tv_humid"
+            android:src="@drawable/humidity" />
     </RelativeLayout>
 
     <LinearLayout
