--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="Person_type_Popup">
+        <item name="android:windowEnterAnimation">@anim/people_type_show</item>
+        <item name="android:windowExitAnimation">@anim/people_type_dismiss</item>
+    </style>
 </resources>
