--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,15 @@
         android:layout_height="70dp"
         android:layout_weight="1.0"
         android:eventsInterceptionEnabled="true"
-        android:gestureStrokeType="multiple">
-    </android.gesture.GestureOverlayView>
+        android:gestureStrokeType="multiple"></android.gesture.GestureOverlayView>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp">
 
 
         <ImageView
@@ -62,9 +61,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textColor="@color/primary_light"
-            android:layout_toLeftOf="@id/iv_network"
             android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@id/iv_network"
+            android:textColor="@color/primary_light"
             android:textSize="25sp" />
 
         <ImageView
@@ -73,8 +72,7 @@
             android:layout_height="35dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/tv_temp"
-            android:src="@drawable/temperature"
-           />
+            android:src="@drawable/temperature" />
 
 
         <TextView
@@ -82,9 +80,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textColor="@color/primary_light"
-            android:layout_toLeftOf="@id/iv_temp"
             android:layout_marginRight="2dp"
+            android:layout_toLeftOf="@id/iv_temp"
+            android:textColor="@color/primary_light"
             android:textSize="25sp" />
 
         <ImageView
@@ -100,10 +98,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="70dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="80dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="70dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -111,31 +109,15 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-
-
-                <ImageView
-                    android:id="@+id/img_captured1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp" />
-                <TextView
-                    android:id="@+id/countText"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="180dp"
-                    android:textColor="@color/red"
-                    android:textStyle="bold"
-                    android:gravity="center"
-                    />
-
-            </FrameLayout>
+            <ImageView
+                android:id="@+id/img_captured1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp" />
 
 
         </LinearLayout>
@@ -150,11 +132,10 @@
                 android:id="@+id/surfaceView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-             ></SurfaceView>
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"></SurfaceView>
         </LinearLayout>
     </LinearLayout>
 
@@ -162,8 +143,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/information_bg">
 
         <TextView
