--- a/app/src/main/res/layout/inputserver_form.xml
+++ b/app/src/main/res/layout/inputserver_form.xml
@@ -1,105 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
+
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal|center_vertical"-->
+            <!--android:layout_margin="15dip"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginRight="16dp"-->
+            <!--android:focusable="true"-->
+            <!--android:focusableInTouchMode="true">-->
+
+            <!--&lt;!&ndash;<LinearLayout-->
+                <!--android:id="@+id/firstLine"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal">-->
+
+                <!--<LinearLayout-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:orientation="vertical">-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/dev_describe"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="5dp"-->
+                        <!--android:text="@string/dev_id"-->
+                        <!--android:textColor="@color/primary_text"-->
+                        <!--android:textSize="10pt" />-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/dev_id"-->
+                        <!--android:layout_width="fill_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_below="@id/dev_describe"-->
+                        <!--android:textColor="@color/primary_text"-->
+                        <!--android:textSize="10pt" />-->
+                <!--</LinearLayout>-->
+
+                <!--<LinearLayout-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:orientation="vertical">-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/ip_describe"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginTop="5dp"-->
+                        <!--android:text="@string/ip_id"-->
+                        <!--android:textColor="@color/primary_text"-->
+                        <!--android:textSize="10pt" />-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/dev_ip"-->
+                        <!--android:layout_width="fill_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_below="@id/ip_describe"-->
+                        <!--android:textColor="@color/primary_text"-->
+                        <!--android:textSize="10pt" />-->
+                <!--</LinearLayout>-->
+            <!--</LinearLayout>&ndash;&gt;-->
+
+<!--&lt;!&ndash;-->
+            <!--android:layout_below="@id/firstLine"-->
+<!--&ndash;&gt;-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/server_describe"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:text="@string/server_ip"-->
+                <!--android:textColor="@color/primary_text"-->
+                <!--android:textSize="10pt" />-->
+
+            <!--<EditText-->
+                <!--android:id="@+id/server_input"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/server_describe"-->
+                <!--android:hint="@string/server_ip_hint"-->
+                <!--android:inputType="text"-->
+                <!--android:textColor="@color/primary_text"-->
+                <!--android:textSize="10pt" />-->
+        <!--</RelativeLayout>-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/QRimage"-->
+        <!--android:layout_width="280dp"-->
+        <!--android:layout_height="160dp"-->
+
+        <!--android:layout_gravity="center_horizontal|center_vertical"/>-->
+
+
+<!--</LinearLayout>-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_margin="15dip"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
+    <!--<RelativeLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center_horizontal|center_vertical"-->
+    <!--android:layout_margin="15dip"-->
+    <!--android:layout_marginLeft="16dp"-->
+    <!--android:layout_marginRight="16dp"-->
+    <!--android:focusable="true"-->
+    <!--android:focusableInTouchMode="true">-->
+    <!---->
+    <!--<TextView-->
+    <!--android:id="@+id/server_describe"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="@string/server_ip"-->
+    <!--android:textColor="@color/primary_text"-->
+    <!--android:textSize="10pt"-->
+    <!--/>-->
 
-            <!--<LinearLayout
-                android:id="@+id/firstLine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <!--<EditText-->
+    <!--android:id="@+id/server_input"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/server_describe"-->
+    <!--android:hint="@string/server_ip_hint"-->
+    <!--android:inputType="text"-->
+    <!--android:textColor="@color/primary_text"-->
+    <!--android:textSize="10pt" />-->
+    <!--</RelativeLayout>-->
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:stretchColumns="1">
 
-                    <TextView
-                        android:id="@+id/dev_describe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/dev_id"
-                        android:textColor="@color/primary_text"
-                        android:textSize="10pt" />
-
-                    <TextView
-                        android:id="@+id/dev_id"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/dev_describe"
-                        android:textColor="@color/primary_text"
-                        android:textSize="10pt" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/ip_describe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/ip_id"
-                        android:textColor="@color/primary_text"
-                        android:textSize="10pt" />
-
-                    <TextView
-                        android:id="@+id/dev_ip"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/ip_describe"
-                        android:textColor="@color/primary_text"
-                        android:textSize="10pt" />
-                </LinearLayout>
-            </LinearLayout>-->
-
-<!--
-            android:layout_below="@id/firstLine"
--->
+        <TableRow>
 
             <TextView
                 android:id="@+id/server_describe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_marginTop="20dp"
-                android:text="@string/server_ip"
+                android:text="服务器地址："
                 android:textColor="@color/primary_text"
                 android:textSize="10pt" />
 
             <EditText
                 android:id="@+id/server_input"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/server_describe"
-                android:hint="@string/server_ip_hint"
+                android:hint="请设置服务器地址"
                 android:inputType="text"
+                android:paddingLeft="20dp"
                 android:textColor="@color/primary_text"
                 android:textSize="10pt" />
-        </RelativeLayout>
 
+            <Button
+                android:id="@+id/connect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="联通测试" />
+
+        </TableRow>
+    </TableLayout>
     <ImageView
         android:id="@+id/QRimage"
         android:layout_width="280dp"
         android:layout_height="160dp"
-
         android:layout_gravity="center_horizontal|center_vertical"/>
 
 
