--- a/app/src/main/res/layout/device_form.xml
+++ b/app/src/main/res/layout/device_form.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    android:orientation="vertical"
-    android:gravity="center_vertical|center_horizontal">
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tip"
@@ -19,8 +19,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-      >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/dev_prefix"
@@ -38,13 +37,24 @@
             android:inputType="text"
             android:textColor="@color/primary_light"
             android:textSize="10pt" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="确定"/>
-
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:text="确定" />
+
+
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btn_chooseCam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="使用相反摄像头" />
+
+
+
+</LinearLayout>
+
